--- a/src/app/features/orders/_components/order-card/order-card.component.html
+++ b/src/app/features/orders/_components/order-card/order-card.component.html
@@ -1,11 +1,11 @@
-<div class="order-card">
+<!-- <div class="order-card">
   <div class="status">
-    <span [class]="order.deliveryStatus.toLowerCase()">{{ order.deliveryStatus }}</span>
+    <span [class]="order.status.toLowerCase()">{{ order.status }}</span>
     <small>On {{ order.deliveryDate }}</small>
   </div>
 
   <div class="product-info">
-    <img [src]="order.productImage" alt="Product" />
+    <img [src]="order." alt="Product" />
     <div>
       <h4>{{ order.brand }}</h4>
       <p>{{ order.productName }}</p>
@@ -23,4 +23,4 @@
     </ng-container>
     <p><a href="#">Rate & Review</a></p>
   </div>
-</div>
+</div> -->
