--- a/src/app/features/settings/_components/user-settings/user-settings.component.html
+++ b/src/app/features/settings/_components/user-settings/user-settings.component.html
@@ -5,7 +5,7 @@
       <li (click)="selectTab('profile')" [class.active]="selectedTab === 'profile'">Profile</li>
       <li (click)="selectTab('orders')" [class.active]="selectedTab === 'orders'">Order History</li>
       <li (click)="selectTab('address')" [class.active]="selectedTab === 'address'">Addresses</li>
-      <li (click)="selectTab('payments')" [class.active]="selectedTab === 'payments'">Payment Methods</li>
+      <!-- <li (click)="selectTab('payments')" [class.active]="selectedTab === 'payments'">Payment Methods</li> -->
       <li (click)="selectTab('notifications')" [class.active]="selectedTab === 'notifications'">Notifications</li>
       <li (click)="selectTab('security')" [class.active]="selectedTab === 'security'">Security</li>
     </ul>
