--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="dashboard-container">
-  <div class="header-wrapper">
+  <div class="header-wrapper" *ngIf="showHeader$ | async">
     <app-header></app-header>
   </div>
 
